fixed current section dark mode

--- a/src/app/shared/sidebare/sidebare.component.css
+++ b/src/app/shared/sidebare/sidebare.component.css
@@ -22,6 +22,11 @@
     width: 120px!important;
 }
 
+.active-dm .under-text{
+    background-color: #4fbd76;
+    width: 120px!important;
+}
+
 .active span{
     color: #2E7748;
 }
